# berlin-for-parents

./: .gitignore  README.md
backend/: .flaskenv  app.py  models.py  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  models.py
backend/app/routes/: __init__.py  playgrounds.py
backend/routes/: playgrounds.py
data/: create_and_populate_playgrounds.sql  import_osm2pgsql.sh
docs/: index.html
docs/css/: main.css
docs/js/: base.js  config.js  list.js  map.js
frontend/: config.py  index.html  list.html
frontend/css/: main.css
frontend/js/: config.js  map.js
frontend/static/scripts/: map.js
frontend/static/styles/: main.css
frontend/templates/: base.html  pg_grid.html  pg_map.html
