[tool.poetry]
name = "berlin-for-parents-backend"
version = "0.1.0"
description = "Backend for playground geospatial data"
authors = ["Sandra Muschkorgel <sandra.muschkorgel@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3"
sqlalchemy = "^2.0"
geoalchemy2 = "0.18.0"
psycopg2-binary = "^2.9"
gunicorn = "^20.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.0.241"
python-dotenv = "^1.0"

[tool.poetry.scripts]
start = "app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"